src/styles/globals.css
:root {
  --topbar-height: 50px;
}

:root {
  --text-color: lightgrey;
  --link-color: white;

  --sidebar-link: #fff3;
  --sidebar-hover-link: white;
  --sidebar-local-link: #fffc;
  --header-color: white;
  --background: #004;
  --border-color: transparent;
  --darkgrey: #114;
  --topbar-text-color: white;
  --content-background: #fff1;
  --backdrop-filter: blur(8px);
}

html {
  color-scheme: dark;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: var(--link-color);
  text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 12px;
}

html,
body {
  max-width: 100vw;
  font: 16px sans-serif;
}

body {
  color: var(--text-color);
  background: var(--background);
}

#app-container {
  display: flex;
  max-width: 1000px;
  background: color-mix(in srgb, var(--background), #004c 100%);
}

body,
#__next {
  pointer-events: none;
}

#__next > * {
  pointer-events: all;
}

#sidebar {
  width: 200px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  position: sticky;
  transition: transform 200ms;
}

#sidebar > a {
  padding: 8px;
  padding-left: 16px;
  border-left: 3.5px solid var(--sidebar-link);
  text-decoration: none;
  transition-duration: 200ms;
  transition-property: border-color;
}

#sidebar > a:hover {
  border-left: 4px solid var(--sidebar-hover-link);
}

#sidebar .local-link {
  border-left: 3.5px solid var(--sidebar-local-link);
}

#sidebar .local-link {
  font-weight: bold;
}

#main-content {
  flex: 1;
  overflow-x: auto;
}

/* apply padding to transition container */
/* avoids size changes when the position is set to absolute */
#main-content > * {
  padding: 16px 8px;
}

#hamburger {
  width: 24px;
  height: 24px;
  background: linear-gradient(
    to bottom,
    transparent 10%,
    var(--topbar-text-color) 10%,
    var(--topbar-text-color) 20%,
    transparent 20%,
    transparent 45%,
    var(--topbar-text-color) 45%,
    var(--topbar-text-color) 55%,
    transparent 55%,
    transparent 80%,
    var(--topbar-text-color) 80%,
    var(--topbar-text-color) 90%,
    transparent 90%
  );
  margin: calc((var(--topbar-height) - 24px) / 2);
  display: none;
  border: 0;
  cursor: pointer;
}

@media (max-width: 800px) {
  #sidebar,
  #main-content {
    /* applying independently avoids a chrome bug with the sidebar's position property */
    backdrop-filter: var(--backdrop-filter);
  }

  #sidebar {
    position: fixed;
    top: var(--topbar-height);
    height: calc(100vh - var(--topbar-height));
    border-right: 2px solid var(--border-color);
    transform: translate(-100%, 0);
    background: var(--background);
  }

  #sidebar > a {
    border-left: 4px solid transparent;
  }

  #app-container {
    display: block;
  }

  #hamburger {
    display: block;
  }
}

#topbar,
#sidebar {
  /* elements with backdrop-filter seem to draw over us without this */
  z-index: 1;
}

@media (min-width: 801px) {
  #app-container {
    /* avoid seams at the sidebar boundary*/
    backdrop-filter: var(--backdrop-filter);
  }

  #topbar {
    position: absolute;
    border-bottom: 0;
    background: none;
    pointer-events: none;
  }

  #topbar > * {
    pointer-events: all;
  }

  #sidebar {
    position: sticky;
    top: 0;
    padding-top: 12px;
    padding-left: 8px;
  }
}

